# C_VideoStore.SQLite3

./: Doxyfile  Makefile.am  README.md  configure.ac  video.db
db/: setup_database  setup_database.c
include/: video.h
src/: main.c  video.c
src/.deps/: customer.Po  entry.Po  main.Po  str.Po  test-main.Po  test.Po  video.Po
